--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
     
     <!-- TODO: Replace with Google Analytics tracking code -->
     <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=GA_TRACKING_ID"></script> -->
+    <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
+
   </head>
 
   <body>
