--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
     <meta name="twitter:title" content="Abdul Qaiyum Jewellery" />
     <meta name="twitter:description" content="Premium jewelry and custom designs in Bahrain" />
     
+    <!-- Favicon -->
+    <link rel="icon" href="/aq-white-initials-thicker.png" type="image/png">
+    
     <!-- Modern Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
